<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.unilim.iut</groupId>
	<artifactId>scrabble</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<!-- Indiquer l'encodage et la version du JDK à utiliser -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.9.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.pixelduke</groupId>
			<artifactId>fxthemes</artifactId>
			<version>1.5.1</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>22</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>22</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>22</version>
		</dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>scrabble.application.ScrabbleFXApplication</mainClass>
					<launcher>app</launcher>
					<jlinkZipName>app</jlinkZipName>
					<jlinkImageName>app</jlinkImageName>
					<stripDebug>true</stripDebug>
					<noHeaderFiles>true</noHeaderFiles>
					<options>
						<!-- So that changing the background of a native Window works well (at least on some machines using win11) -->
						<option>-Dprism.forceUploadingPainter=true</option>
						<!-- For getting the native window handle (WindowUtils.getNativeHandleForStage method) -->
						<option>--add-opens</option>
						<option>javafx.graphics/javafx.stage=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</option>
					</options>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<mainClass>scrabble.application.ScrabbleConsoleApplication</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>